Add city coords to dto